--- a/public/index.html
+++ b/public/index.html
@@ -188,17 +188,17 @@
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <h3>Profile </h3>
-                    <p>I'am Pranjay Poddar , A second year CSE-CC UnderGrad Student In SRMIST, KTR-Chennai
+                    <p>I'm Pranjay Poddar, A third-year undergraduate student pursuing BTECH in CSE with a specialisation in cloud computing from SRM Institute Of Science And Technology, KTR-Chennai.
                         <br>
-                        <br> I am a full stack Web developer, Graphic Designer , UI/UX developer , Data Science enthusiast, AI enthusiast and a Cloud Computing enthusiast. I like to work on projects related to web development field by using a wide-range
-                        of resources available on various data-sharing platforms.
-                        <br><br> I cherrish collaborations on Github with people having interest in various Domains of the following Modules :</p>
+                        <br> I am a full-stack Web developer, Graphic Designer, UI/UX developer, Data Science/AI and Cloud Computing enthusiast. I like to work on projects associated with the web development domain by using a wide range of resources available
+                        on various data-sharing platforms.
+                        <br><br>I cherish collaborations on Github with people having interests in the following domains :</p>
                     <div class="row" id="list">
                         <div class="col-lg-6">
                             <ul>
                                 <li> Web Development</li>
                                 <li> Graphic Designing</li>
-                                <li>UI/UX Development</li>
+                                <li> UI/UX Development</li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
@@ -206,7 +206,6 @@
                                 <li> Competitive Coding</li>
                                 <li> Data Structures</li>
                                 <li> Algorithms</li>
-
                                 <br>
                             </ul>
                         </div>
@@ -221,13 +220,13 @@
             <div class="row" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                 <div class="col-lg-6">
                     <div class="education-item pb-0">
-                        <h4>Bachelor of Technology, B.Tech</h4>
+                        <h4>Bachelor of Technology, B.TECH</h4>
                         <h5>2019 - 2023</h5>
-                        <p>SRM INSTITUTE OF SCIENCE AND TECHNOLOGY,CHENNAI</p>
+                        <p>SRM INSTITUTE OF SCIENCE AND TECHNOLOGY, CHENNAI</p>
                         <p>
                             <ul>
-                                <li>Computer Science and Engineering</li>
-                                <li>Specialisation in Cloud Computing</li>
+                                <li>Computer Science And Engineering</li>
+                                <li>Specialisation In Cloud Computing</li>
                                 <li>CGPA: 9.7</li>
                             </ul>
                         </p>
@@ -235,14 +234,14 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="education-item">
-                        <h4>Senior Secondary Education- CBSE</h4>
-                        <p>SR Public Senior Secondary School ,Kota (Rajasthan)</p>
+                        <h4>Senior Secondary Education(CBSE)</h4>
+                        <p>SR Public Senior Secondary School, Kota(Rajasthan)</p>
                         <h5>2017 - 2018</h5>
                     </div>
                     <div class="education-item">
-                        <h4>Secondary Education-CBSE</h4>
+                        <h4>Secondary Education(CBSE)</h4>
                         <h5>2003-2017</h5>
-                        <p>Christ Church Boys Senior Secondar School,Jabalpur(M.P.)</p>
+                        <p>Christ Church Boys Senior Secondar School, Jabalpur(M.P.)</p>
                         <p>
                             <ul>
                                 <li>CGPA: 10 </li>
@@ -261,53 +260,53 @@
             <div class="row skills-content">
                 <div class="col lg-6">
                     <div class="progress">
-                        <span class="skill">C Programming <i class="val">90%</i></span>
+                        <span class="skill">C<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Javascript<i class="val">80%</i></span>
+                        <span class="skill">C++<i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Java<i class="val">30%</i></span>
+                        <span class="skill">JavaScript<i class="val">70%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Python <i class="val">50%</i></span>
+                        <span class="skill">Python<i class="val">60%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col lg-6">
                     <div class="progress">
-                        <span class="skill">Graphic Designing<i class="val">90%</i></span>
+                        <span class="skill">Web Dev<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Web Development<i class="val">75%</i></span>
+                        <span class="skill">Angular<i class="val">75%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Angular<i class="val">55%</i></span>
+                        <span class="skill">Competitive Coding<i class="val">55%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="progress">
-                        <span class="skill">Competetive Programming<i class="val">40%</i></span>
+                        <span class="skill">Graphic Design<i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -320,7 +319,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="count-box">
                         <i class="fas fa-award"></i>
-                        <span data-toggle="counter-up">21</span>
+                        <span data-toggle="counter-up">23</span>
                         <p>Certifications</p>
                     </div>
                 </div>
@@ -334,7 +333,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                     <div class="count-box">
                         <i class="fas fa-project-diagram"></i>
-                        <span data-toggle="counter-up">821</span>
+                        <span data-toggle="counter-up">856</span>
                         <p>Git-Commits</p>
                     </div>
                 </div>
@@ -367,25 +366,25 @@
                         <h4>Technical Committee Member</h4>
                         <h5>Feb,2021-Present</h5>
                         <p><i class="fas fa-caret-right"></i>Salesforce SRM</p>
-                        <p>Working with Salesforce SRM under Technical domain. </p>
+                        <p>Working with Salesforce SRM under Technical domain.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Web Developer</h4>
                         <h5>Oct,2020-Present</h5>
                         <p><i class="fas fa-caret-right"></i>Inception Wave Student Chapter SRM</p>
-                        <p>Working with IWSC SRM as a front-end web developer. </p>
+                        <p>Working with IWSC SRM as a front-end web developer.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Web Developer and Graphic Designer</h4>
                         <h5>Feb,2020-Present</h5>
                         <p><i class="fas fa-caret-right"></i>WEBARCH CLUB SRM</p>
-                        <p>Working with Webarch Club as a graphic designer and competitive coder. </p>
+                        <p>Working with Webarch Club as a Web developer and Graphic Designer.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Web Developer</h4>
                         <h5>July,2020-September,2020</h5>
                         <p><i class="fas fa-caret-right"></i>DATA SCIENCE COMMUNITY SRM</p>
-                        <p>Worked with Data Science Community as a Web Develpoer.</p>
+                        <p>Worked with Data Science Community as a Web Developer.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Rocket Propulsion Team Member</h4>
@@ -401,25 +400,25 @@
                         <h4>Committee Member</h4>
                         <h5>September,2019-Present</h5>
                         <p><i class="fas fa-caret-right"></i>AARUUSH-Tech Festival</p>
-                        <p>Member of an organising committee and workshop committee in Aaruush, A National Level Techno Management Fest.</p>
+                        <p>Member of an organizing committee and workshop committee in Aaruush, A National Level Techno-Management Fest.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Committee Member</h4>
                         <h5>July,2019-Present</h5>
                         <p><i class="fas fa-caret-right"></i>Rotaract Club SRM</p>
-                        <p>An active member of an organising committee of Rotaract Club SRM.</p>
+                        <p>An active member of an organizing committee of Rotaract Club SRM.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Volunteer</h4>
                         <h5>September,2019-Januray,2020</h5>
                         <p><i class="fas fa-caret-right"></i>AARUUSH-Tech Festival</p>
-                        <p>An active member in volunteering for an organising discipline committee in Aaruush, A National Level Techno Management Fest. </p>
+                        <p>An active member in volunteering for an organizing discipline committee in Aaruush, A National Level Techno-Management Fest.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Volunteer</h4>
                         <h5>Januray,2020-March,2020</h5>
                         <p><i class="fas fa-caret-right"></i>MILAN-Cultural Festival</p>
-                        <p>An active member in volunteering for a Informals committee, to ensure proper functioning of discipline in events in MILAN , cultural festival of our College</p>
+                        <p>An active member in volunteering for an Informals committee, to ensure the proper functioning of discipline in events in MILAN, the cultural festival of our College.</p>
                     </div>
                 </div>
             </div>
@@ -460,9 +459,10 @@
             <div class="row mt-2">
                 <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="500" data-aos-easing="ease-in-out">
                     <div class="info-box">
-                        <i class="fas fa-map-marked-alt"></i>
-                        <h3>Address</h3>
-                        <p>Chennai Tamil Nadu, India</p>
+                        <a href="https://goo.gl/maps/MGEcq4aKYyjk7RnaA" target="_blank"> <i class="fas fa-map-marked-alt"></i>
+                            <h3>Address</h3>
+                            <p>Chennai Tamil Nadu, India</p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="500" data-aos-easing="ease-in-out">
@@ -482,16 +482,18 @@
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
                     <div class="info-box">
-                        <i class="fas fa-envelope"></i>
-                        <h3>Email </h3>
-                        <p>pranjaypoddar@gmail.com</p>
+                        <a href="mailto:pranjaypoddar@gmail.com"><i class="fas fa-envelope"></i>
+                            <h3>Email </h3>
+                            <p>pranjaypoddar@gmail.com</p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
                     <div class="info-box">
-                        <i class="fas fa-phone-alt"></i>
-                        <h3>Call </h3>
-                        <p>+91 6263804262 </p>
+                        <a href="tel:+91-6263804262"> <i class="fas fa-phone-alt"></i>
+                            <h3>Call </h3>
+                            <p>+91-6263804262 </p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -517,7 +519,7 @@
                 <div class="mb-3">
                     <div class="loading">Loading</div>
                     <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                    <div class="sent-message">Your message has been sent.Thank you!</div>
                 </div>
                 <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
