--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         gtag('config', 'UA-171690017-1');
     </script>
     <script src="js/scroll.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="img/pranjay.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./img/pranjay2.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/mecircle.png" type="image/icon type">
+    <link rel="icon" href="./img/pranjay2.png" type="image/icon type">
     <!-- <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
@@ -186,7 +186,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <img id="pic" src="img/pranjay.png" class="mx-auto d-block" alt="Responsive image">
+                    <img id="pic" src="img/pranjay2.png" class="mx-auto d-block" alt="Responsive image">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <h3>Profile </h3>
