--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,16 @@
     </script> -->
     <script>
         // right click disable---------start--------------------------
-        //   document.addEventListener("contextmenu", function(e){
-        //     e.preventDefault();
-        // }, false);
+        document.addEventListener("contextmenu", function(e) {
+            e.preventDefault();
+        }, false);
         // right click disable---------end--------------------------
         // dark mode toggle start-----------------------------------
         function lightmode() {
             var element = document.body;
             element.classList.toggle("light-mode");
+            var x = document.getElementById("myAudio");
+            x.play();
         }
         // dark mode toggle end ------------------------------------
 
@@ -627,6 +629,9 @@
     <script src="/__/firebase/8.2.10/firebase-app.js"></script>
     <script src="/__/firebase/8.2.10/firebase-analytics.js"></script>
     <script src="/__/firebase/init.js"></script>
+    <audio id="myAudio">
+        <source src="./click.mp3" type="audio/ogg">
+      </audio>
 </body>
 </div>
 
