--- a/public/projects.html
+++ b/public/projects.html
@@ -344,7 +344,7 @@
                                 <p></p>
                                 <div class="portfolio-links">
                                     <a href="projects images/hangman.png" data-gall="portfolioGallery" class="venobox" title="Hangman Game"><i class="fas fa-images"></i></a>
-                                    <a href="" target="_blank"><i class="fas fa-link"></i></a>
+                                    <a href="https://bundlifrontend-hangman.netlify.app/hangman/index.html" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -357,7 +357,7 @@
                                 <p></p>
                                 <div class="portfolio-links">
                                     <a href="projects images/tic-tac-toe.png" data-gall="portfolioGallery" class="venobox" title="Tic-Tac-Toe Game"><i class="fas fa-images"></i></a>
-                                    <a href="" target="_blank"><i class="fas fa-link"></i></a>
+                                    <a href="https://t3game.netlify.app/tic-tac-toe/" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
