added scroll to top

--- a/index.html
+++ b/index.html
@@ -534,11 +534,19 @@
     </section>
     <!--End Of Contacts Section-->
     <section class="thanks">
-        <div class="container">
-            <h4 style="text-align: center; ">&copy2021 <span href="#about" id="credit">Pranjay Poddar</span></h4>
+        <a href="#myDiv" class="top n " id="taketotop">
+            <i class="fa fa-angle-double-up arrow up"></i>
 
+        </a>
+        <div class="container">
+            <h4 style="text-align: center; ">&copy2021 <span id="credit">Pranjay Poddar</span></h4>
         </div>
     </section>
+
+
+
+
+
     <!--JQuery Plugins AND js Files-->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
