--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     </script> -->
     <script>
         // right click disable---------start--------------------------
-        document.addEventListener("contextmenu", function(e) {
-            e.preventDefault();
-        }, false);
+        // document.addEventListener("contextmenu", function(e) {
+        //     e.preventDefault();
+        // }, false);
         // right click disable---------end--------------------------
         // dark mode toggle start-----------------------------------
         function lightmode() {
@@ -106,11 +106,9 @@
     <!--Particle Animation-->
     <div id="myDiv">
         <div id="particles-js"></div>
-        <div id="bparticles-js"></div>
         <script src="js/particles.js"></script>
         <script src="js/particle-js-script.js"></script>
-        <script src="js/blackparticle-js-script.js"></script>
-        <script src="js/bparticles.js"></script>
+
         <!--End Of Particle Animation-->
 
         <!--Header Area-->
@@ -159,11 +157,11 @@
             <script src="js/typed.js"></script>
             <script>
                 var typed = new Typed('.type', {
-                    strings: ['Web Developer',
+                    strings: [' Full Stack Web Developer',
+                        'Competetive Programmer',
                         'Graphic Designer',
-                        'Competetive Coder',
                         'Data Science Enthusiast',
-                        'AI Enthusiast',
+                        'Cloud Computing Enthusiast',
                     ],
                     typeSpeed: 60,
                     backSpeed: 30,
@@ -171,7 +169,14 @@
                     smartBackspace: true // Default value
                 });
             </script>
+            <div class="header_social">
+                <div class=" text-center">
 
+                    <a class="projects-social grow" href="https://www.linkedin.com/in/pranjay-poddar/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="projects-social" href="https://github.com/pranjay-poddar" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="projects-social" href="https://twitter.com/PranjayPoddar" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
     </div>
     </header>
     <!--End Header Area-->
