--- a/public/projects.html
+++ b/public/projects.html
@@ -394,6 +394,19 @@
                     <!-- javascript projects eda  -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-react">
                         <div class="portfolio-wrap">
+                            <img src="projects images/cms.png" class="img-fluid" alt="College Made Simpler logo">
+                            <div class="portfolio-info">
+                                <h4>College Made Simpler </h4>
+                                <p></p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/cms.png" data-gall="portfolioGallery" class="venobox" title="College Made Simpler logo"><i class="fas fa-images"></i></a>
+                                    <a href="https://collegemadesimpler.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-react">
+                        <div class="portfolio-wrap">
                             <img src="projects images/development.png" class="img-fluid" alt="project coming soon image">
                             <div class="portfolio-info">
                                 <h4>Project Coming Soon</h4>
