--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,9 @@
     </script> -->
     <script>
         // right click disable---------start--------------------------
-        document.addEventListener("contextmenu", function(e) {
-            e.preventDefault();
-        }, false);
+        // document.addEventListener("contextmenu", function(e) {
+        //     e.preventDefault();
+        // }, false);
         // right click disable---------end--------------------------
         // dark mode toggle start-----------------------------------
         function lightmode() {
@@ -424,6 +424,10 @@
         <!--End Of Projects Section-->
         <!--End Of Contacts Section-->
         <section class="thanks">
+            <a href="#myDiv" class="top n " id="taketotop">
+                <i class="fa fa-angle-double-up arrow up"></i>
+
+            </a>
             <div class="container">
                 <h4 class="text-center">&copy2021 <span href="#about" id="credit">Pranjay Poddar</span></h4>
                 <h5 class="text-center">Follow On</h5>
