added projects and updated billboards and meta tags

--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <meta name="description" content="A CSE undergrad and a tech enthusiast who specialises in Cloud Computing. ">
-    <meta name="keywords" content="Pranjay Poddar, Portfolio Website, Pranjay Poddar website, Pranjay Poddar SRM, Portfolio, CV, Resume,SRMIST KTR Chennai">
+    <meta name="description" content="BTECH In CSE With Specialisation In Cloud Computing">
+    <meta name="keywords" content="Pranjay Poddar, Pranjay, Poddar, Portfolio, Portfolio Website, Pranjay Poddar website, Pranjay Poddar SRM, Portfolio, CV, Resume,SRMIST KTR Chennai, webarch , IWSC srm,SRM university ,SRM website, DAA, Directorate Of alumni Affairs SRM, SRMUAA, CS50 , CS50 harvard, CS50x, mentor , gwsoc, Hcssoc, google, facebook, FAANG">
+    <meta name="author" content="Pranjay Poddar" />
+    <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
+    <meta property="og:title" content="Portfolio-Pranjay Poddar" />
+    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
+    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio-Projects&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="./apple touch/114.png">
@@ -125,7 +131,7 @@
                                 <li class="nav-item"><a class="nav-link" href="./index.html#header">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#about">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#experience">Experience</a></li>
-                                <li class="nav-item active"><a class="nav-link" href="./projects.html">Projects</a></li>
+                                <li class="nav-item active"><a class="nav-link" data-toggle="collapse" data-target="#navbarid" href="./projects.html">Projects</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./blogs.html">Blogs</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#contact">Contact</a></li>
                             </ul>
@@ -160,6 +166,7 @@
                             <li data-filter=".filter-angular">Angular</li>
                             <li data-filter=".filter-react">React</li>
                             <li data-filter=".filter-c">C/C++</li>
+                            <li data-filter=".filter-os">Open Source</li>
                             <!-- <li data-filter=".filter-python">Python</li> -->
                         </ul>
                     </div>
@@ -207,18 +214,31 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
+                            <img src="projects images/Shopify.png" class="img-fluid" alt="Shopify WebApp">
+                            <div class="portfolio-info">
+                                <h4>Shopify</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/Shopify.png" data-gall="portfolioGallery" title="Shopify WebApp" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://shopify1.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                        <div class="portfolio-wrap">
                             <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
                             <div class="portfolio-info">
                                 <h4>IWSC Student Chapter Portal</h4>
                                 <p> </p>
                                 <div class="portfolio-links">
                                     <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal" class="venobox"><i class="fas fa-images"></i></a>
-                                    <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
+                                    <a href="https://iwsc-scp.netlify.app/home" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                   
+
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
                             <img src="projects images/todo.png" class="img-fluid" alt="Todo list app logo">
@@ -293,7 +313,7 @@
                                 <p>In Web Hackathon</p>
                                 <div class="portfolio-links">
                                     <a href="projects images/Preksha.png" data-gall="portfolioGallery" class="venobox" title="Preksha Website"><i class="fas fa-images"></i></a>
-                                    <a href="https://github.com/pranjay-poddar/Preksha" target="_blank"><i class="fas fa-link"></i></a>
+                                    <a href="https://pranjay-poddar.github.io/Inweb-Hackathon/pages/index.html" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -384,7 +404,7 @@
                                 <p></p>
                                 <div class="portfolio-links">
                                     <a href="projects images/daa.png" data-gall="portfolioGallery" class="venobox" title="daa website"><i class="fas fa-images"></i></a>
-                                    <a href="https://github.com/SRM-Alumni-Affairs/SRM-Alumni-Affairs-Website" target="_blank"><i class="fas fa-link"></i></a>
+                                    <a href="https://srmuaa.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -440,7 +460,33 @@
                                 <p></p>
                                 <div class="portfolio-links">
                                     <a href="projects images/webarch.png" data-gall="portfolioGallery" class="venobox" title="Webarch Official Website logo"><i class="fas fa-images"></i></a>
-                                    <a href="https://webarchsrm.com/" target="_blank"><i class="fas fa-link"></i></a>
+                                    <a href="https://webarchsrm2021.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-os">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/devgeeks.png" class="img-fluid" alt="Dev Geeks Website logo">
+                            <div class="portfolio-info">
+                                <h4>Dev Geeks</h4>
+                                <p></p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/devgeeks.png" data-gall="portfolioGallery" class="venobox" title="Dev Geeks Official Website logo"><i class="fas fa-images"></i></a>
+                                    <a href="https://pranjay-poddar.github.io/Dev-Geeks/Repository_web_page/index.html" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-os">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/dsalgo.png" class="img-fluid" alt="Data Structures and Algorithms Website logo">
+                            <div class="portfolio-info">
+                                <h4>Data Structures and Algorithms</h4>
+                                <p></p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/dsalgo.png" data-gall="portfolioGallery" class="venobox" title="Ds-Algo Website"><i class="fas fa-images"></i></a>
+                                    <a href="https://pranjay-poddar.github.io/Data-Structures-And-Algorithms/web_page/index.html" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -481,6 +527,10 @@
         <script src="js/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
         <!-- <script src="js/aos.js"></script> -->
+        <!-- scroll script  -->
+        <script src="js/jquery.nav.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <!-- scroll script end  -->
         <script src="js/jquery.nav.js"></script>
         <script src="js/venobox.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
