--- a/blogs.html
+++ b/blogs.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
-    <meta name="description" content="A CSE undergrad and a tech enthusiast who specialises in Cloud Computing. ">
-    <meta name="keywords" content="Pranjay Poddar, Portfolio Website, Pranjay Poddar website, Pranjay Poddar SRM, Portfolio, CV, Resume,SRMIST KTR Chennai">
+    <meta name="description" content="BTECH In CSE With Specialisation In Cloud Computing">
+    <meta name="keywords" content="Pranjay Poddar, Pranjay, Poddar, Portfolio, Portfolio Website, Pranjay Poddar website, Pranjay Poddar SRM, Portfolio, CV, Resume,SRMIST KTR Chennai, webarch , IWSC srm,SRM university ,SRM website, DAA, Directorate Of alumni Affairs SRM, SRMUAA, CS50 , CS50 harvard, CS50x, mentor , gwsoc, Hcssoc, google, facebook, FAANG">
+    <meta name="author" content="Pranjay Poddar" />
+    <meta property="og:url" content="https://pranjay-portfolio.web.app/" />
+    <meta property="og:title" content="Portfolio-Pranjay Poddar" />
+    <meta property="og:description" content="BTECH InCSE With Specialisation In Cloud Computing" />
+    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio-Blogs&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
+
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="./apple touch/114.png">
@@ -59,6 +65,10 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/venobox.css">
+    <!-- scroll script  -->
+    <script src="js/jquery.nav.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <!-- scroll script end  -->
     <link rel="stylesheet" type="text/css" href="css/brands.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!------------------------------------------------------Bot start---------------------------------------------------->
@@ -121,7 +131,7 @@
                                 <li class="nav-item"><a class="nav-link" href="./index.html#about">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#experience">Experience</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
-                                <li class="nav-item active"><a class="nav-link" href="./blogs.html">Blogs</a></li>
+                                <li class="nav-item active"><a class="nav-link" data-toggle="collapse" data-target="#navbarid" href="./blogs.html">Blogs</a></li>
                                 <li class="nav-item"><a class="nav-link" href="./index.html#contact">Contact</a></li>
                             </ul>
                         </div>
