--- a/public/projects.html
+++ b/public/projects.html
@@ -51,11 +51,11 @@
         gtag('config', 'UA-171690017-1');
     </script>
     <script src="js/scroll.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="./img/pranjay2.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./img/pranjay4.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link rel="icon" href="./img/pranjay2.png" type="image/icon type">
+    <link rel="icon" href="./img/pranjay4.png" type="image/icon type">
     <!-- <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
@@ -181,19 +181,6 @@
                     </div>
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
-                            <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
-                            <div class="portfolio-info">
-                                <h4>IWSC Student Chapter Portal</h4>
-                                <p> </p>
-                                <div class="portfolio-links">
-                                    <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal" class="venobox"><i class="fas fa-images"></i></a>
-                                    <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
-                        <div class="portfolio-wrap">
                             <img src="projects images/covinex.png" class="img-fluid" alt="Covinex Covid testing WebApp">
                             <div class="portfolio-info">
                                 <h4>Covinex</h4>
@@ -205,6 +192,33 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/swasthify.png" class="img-fluid" alt="Swasthify WebApp">
+                            <div class="portfolio-info">
+                                <h4>Swasthify</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/swasthify.png" data-gall="portfolioGallery" title="Swasthify WebApp" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://swasthify.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
+                            <div class="portfolio-info">
+                                <h4>IWSC Student Chapter Portal</h4>
+                                <p> </p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal" class="venobox"><i class="fas fa-images"></i></a>
+                                    <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                   
                     <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
                         <div class="portfolio-wrap">
                             <img src="projects images/todo.png" class="img-fluid" alt="Todo list app logo">
@@ -362,6 +376,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/daa.png" class="img-fluid" alt="daa website">
+                            <div class="portfolio-info">
+                                <h4>Directorate Of Allumni Affairs Official Website</h4>
+                                <p></p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/daa.png" data-gall="portfolioGallery" class="venobox" title="daa website"><i class="fas fa-images"></i></a>
+                                    <a href="https://github.com/SRM-Alumni-Affairs/SRM-Alumni-Affairs-Website" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- c/c++ projects  -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-c">
                         <div class="portfolio-wrap">
@@ -401,6 +428,19 @@
                                 <div class="portfolio-links">
                                     <a href="projects images/cms.png" data-gall="portfolioGallery" class="venobox" title="College Made Simpler logo"><i class="fas fa-images"></i></a>
                                     <a href="https://collegemadesimpler.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-react">
+                        <div class="portfolio-wrap">
+                            <img src="projects images/webarch.png" class="img-fluid" alt="Webarch Official Website logo">
+                            <div class="portfolio-info">
+                                <h4>Webarch Official Website</h4>
+                                <p></p>
+                                <div class="portfolio-links">
+                                    <a href="projects images/webarch.png" data-gall="portfolioGallery" class="venobox" title="Webarch Official Website logo"><i class="fas fa-images"></i></a>
+                                    <a href="https://webarchsrm.com/" target="_blank"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
