--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
         drift.load('izskvvhsx7wr');
     </script>
     <!-- End of Async Drift Code -->
-
+    <script type="text/javascript">
+        window.addEventListener('hashchange', function() {
+            document.querySelector('.active').classList.remove('active');
+            document.querySelector('[href="' + window.location.hash + '"]').classList.add('active');
+        });
+    </script>
 
 
 </head>
@@ -586,7 +591,10 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
     <!-- <script src="js/aos.js"></script> -->
-
+    <!-- scroll script  -->
+    <script src="js/jquery.nav.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <!-- scroll script end  -->
     <script src="/js/bootstrap.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
