--- a/public/blogs.html
+++ b/public/blogs.html
@@ -227,16 +227,16 @@
             </div>
         </section>
         <!--JQuery Plugins AND js Files-->
-        <script src="js/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+        <script src="./js/jquery-3.5.1.min.js"></script>
+        <script type="text/javascript" src="./js/isotope.pkgd.min.js"></script>
         <!-- <script src="js/aos.js"></script> -->
-        <script src="js/jquery.nav.js"></script>
-        <script src="js/venobox.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.easing.min.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="js/counterup.min.js"></script>
+
+        <script src="./js/venobox.min.js"></script>
+        <script src="./js/bootstrap.min.js.map"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/jquery.easing.min.js"></script>
+        <script src="./js/jquery.waypoints.min.js"></script>
+        <script src="./js/counterup.min.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <!-------------------------JAVASCRIPT ANIMATION SCRIPTS-------------------->
         <script>
