--- a/public/projects.html
+++ b/public/projects.html
@@ -14,10 +14,7 @@
     <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=Portfolio-Projects&subtitle=Pranjay%20Poddar%20-2021&theme=dark" />
 
     <link rel="manifest" href="./manifest.webmanifest">
-    <link rel="apple-touch-icon" sizes="57x57" href="./apple touch/57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./apple touch/114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./apple touch/72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./apple touch/144.png">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171690017-1"></script>
 
@@ -524,17 +521,18 @@
             </div>
         </section>
         <!--JQuery Plugins AND js Files-->
-        <script src="js/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+        <script src="./js/jquery-3.5.1.min.js"></script>
+        <script type="text/javascript" src="./js/isotope.pkgd.min.js"></script>
         <!-- <script src="js/aos.js"></script> -->
 
-        <script src="js/jquery.nav.js"></script>
-        <script src="js/venobox.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.easing.min.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="js/counterup.min.js"></script>
+        <script src="./js/jquery.nav.js"></script>
+        <script src="./js/venobox.min.js"></script>
+        <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="./js/bootstrap.min.js.map"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/jquery.easing.min.js"></script>
+        <script src="./js/jquery.waypoints.min.js"></script>
+        <script src="./js/counterup.min.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <!-------------------------JAVASCRIPT ANIMATION SCRIPTS-------------------->
         <script>
