--- a/public/index.html
+++ b/public/index.html
@@ -107,11 +107,16 @@
 
 
 </head>
-<!-- pre-loader------------- -->
-<!-- <div id="preloader" aria-busy="true" aria-label="Loading, Please Wait." role="progressbar"><i class="fas fa-user-astronaut" id="icon"></i>
-</div> -->
 
-<body>
+<body onload="loadinganimate()">
+    <div class="loader-wrapper" id="hideDiv">
+        <span class="loader"><span class="loader-inner"> </span></span>
+        <br>
+        <div>
+            <h5 style="margin-left: 5px;"> Loading...</h5>
+        </div>
+
+    </div>
 
     <!--Particle Animation-->
     <div id="myDiv">
@@ -582,10 +587,13 @@
         </div>
     </section>
 
-
-
-
-
+    <script>
+        function loadinganimate() {
+            setTimeout(function() {
+                document.getElementById("hideDiv").style.display = "none";
+            }, 4000)
+        }
+    </script>
     <!--JQuery Plugins AND js Files-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
