--- a/public/projects.html
+++ b/public/projects.html
@@ -68,6 +68,7 @@
     <link rel="stylesheet" href="css/venobox.css">
     <link rel="stylesheet" type="text/css" href="css/brands.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/scoll.css">
     <!------------------------------------------------------Bot start---------------------------------------------------->
     <!-- Start of Async Drift Code -->
     <script>
@@ -533,6 +534,16 @@
                 </div>
             </div>
         </section>
+        <script>
+            function loadinganimate() {
+                setTimeout(function() {
+                    document.getElementById("hideDiv").style.display = "none";
+                    document.querySelector("body").style.overflowY = "scroll";
+                }, 4000)
+            }
+        </script>
+
+
         <!--JQuery Plugins AND js Files-->
         <!--JQuery Plugins AND js Files-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
